[package]
name = "sosa"
version = "3.0.3"
edition = "2021"
repository = "https://github.com/fraterenz/sosa"
description = "Stochastic simulation algorithm (SSA) with a Monte-Carlo generating method"
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = "1.0"
rand = { version = "0.9.1", features = ["small_rng"] }
rand_distr = "0.5.1"
thiserror = "2"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
